--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ obj
 bin
 /bin
 /server-20221214-231322.log
-./server-20221214-231322.log
-/.vscode
-/.gitignore
+server-20221214-231322.log
+.vscode
+.git/info/exclude
